[gd_scene load_steps=10 format=3 uid="uid://b6mskrm1n176r"]

[ext_resource type="Script" uid="uid://b6inujglidn5n" path="res://world/World.gd" id="1_eu7l1"]
[ext_resource type="PackedScene" uid="uid://wo631fluqa0p" path="res://world/Level.tscn" id="2_p1v5b"]
[ext_resource type="Script" uid="uid://dm5k4y4py5jhc" path="res://world/Level.gd" id="3_bah7m"]
[ext_resource type="PackedScene" uid="uid://baj5gp1mlm380" path="res://world/Player.tscn" id="3_wygdx"]
[ext_resource type="PackedScene" uid="uid://b7w2vlfbvmfq7" path="res://utils/camera/Camera.tscn" id="4_bah7m"]
[ext_resource type="Script" uid="uid://bn7yub4ucp6o4" path="res://utils/Saver.gd" id="5_fv4w7"]
[ext_resource type="PackedScene" uid="uid://mxu6thvv1ycr" path="res://world/MouseHandler.tscn" id="6_p1v5b"]
[ext_resource type="PackedScene" uid="uid://dnk1mn0lm0c3d" path="res://ui/PauseMenu.tscn" id="7_wygdx"]

[sub_resource type="Environment" id="Environment_ig7tw"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.2484, 0.2484, 0.2484, 1)
ssao_intensity = 3.89
ssao_power = 5.9999876
glow_enabled = true
glow_blend_mode = 1
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0, 0, 0, 1)
fog_density = 1.0

[node name="World" type="Node3D"]
process_mode = 3
script = ExtResource("1_eu7l1")

[node name="Level" parent="." groups=["game"] instance=ExtResource("2_p1v5b")]
unique_name_in_owner = true
process_mode = 1
script = ExtResource("3_bah7m")

[node name="Player" parent="." groups=["game", "save"] instance=ExtResource("3_wygdx")]
unique_name_in_owner = true
process_mode = 1

[node name="Camera" parent="." instance=ExtResource("4_bah7m")]
process_mode = 1

[node name="Saver" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_fv4w7")

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ig7tw")

[node name="MouseHandler" parent="." groups=["game"] instance=ExtResource("6_p1v5b")]
seconds = 1.0

[node name="PauseMenu" parent="." instance=ExtResource("7_wygdx")]
unique_name_in_owner = true
process_mode = 2
visible = false

[connection signal="quitGame" from="PauseMenu" to="." method="quitGame"]
[connection signal="resumeGame" from="PauseMenu" to="." method="resumeGame"]
